Fixes alignment issues with buttons on wider screens

--- a/manon/button-base.scss
+++ b/manon/button-base.scss
@@ -134,11 +134,18 @@ input[type="reset"] {
   }
 }
 
-/* Buttons can not be flex containers */
-/* But these elements can. So using flex box where possible. */
+/* Buttons can not be flex containers as it gives issues with line breaks */
+/* It does work on wider screens and on other elements. */
+/* So using flex box where possible. */
 a.button,
 input[type="button"],
 input[type="submit"],
 input[type="reset"] {
   display: flex;
+}
+
+@media (min-width: $breakpoint) {
+  button {
+    display: flex;
+  }
 }
